@@ -348,7 +348,8 @@ header.\hfil\break
 
 \section{Lattices \& Quadratic Forms}
 \subsec{Quadratic forms}
-\li{evaluate $^tx Q y$, $^tx Q x$}{qfbil$(x,y,\{Q=\var{id}\})${\rm, }qfnorm}
+\li{evaluate $^tx Q y$}{qfeval$(\{Q=\var{id}\},x,y)$}
+\li{evaluate $^tx Q x$}{qfeval$(\{Q=\var{id}\},x)$}
 \li{signature of quad form $^ty*x*y$}{qfsign$(x)$}
 \li{decomp into squares of $^ty*x*y$}{qfgaussred$(x)$}
 \li{eigenvalues/vectors for real symmetric $x$}{qfjacobi$(x)$}
