@@ -24,18 +24,18 @@ qfminim(L~*L,10^16,,2)[2]
 forqfvec(v, [3,2;2,3], 3, print(v))
 forqfvec(v, [3,2;2,3],, print(v))
 forqfvec(v,[;],3,)
-x=[1,2,3]~; y=[-1,0,1]~; qfnorm(x)
-q=[1,2,3;2,2,-1;3,-1,0]; qfnorm(x, q)
-qfbil(x,y)
-qfbil(x,y,q)
-M=[1,2,3;4,5,6;7,8,9]; qfnorm(M)
-qfnorm(M,q)
+x=[1,2,3]~; y=[-1,0,1]~; qfeval(,x)
+q=[1,2,3;2,2,-1;3,-1,0]; qfeval(q,x)
+qfeval(,x,y)
+qfeval(q,x,y)
+M=[1,2,3;4,5,6;7,8,9]; qfeval(,M)
+qfeval(q,M)
 
-qfnorm(1)
-qfnorm(1,1)
-qfnorm(x,Mat(1))
-qfnorm(x,Mat(x~))
-qfbil(1,1)
-qfbil([1],[1,2])
-qfbil([1,2],[1,2],q)
-qfbil([1,2],[1,2],Mat([1,2]))
+qfeval(,1)
+qfeval(,1,1)
+qfeval(Mat(1),x)
+qfeval(Mat(x~),x)
+qfeval(,1,1)
+qfeval(,[1],[1,2])
+qfeval(q,[1,2],[1,2])
+qfeval(Mat([1,2]),[1,2],[1,2])
